[project]
name = "hts-bench"
version = "0.1.0"
description = "The first public, reasoning aware HTS classification benchmark - built on CROSS rulings, scored on both code accuracy and GRI citation fidel"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tarun Aditya Kusupati" }
]
dependencies = []

[project.scripts]
hts-bench = "hts_bench.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
